<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/branco">

    <TextView
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/rosa"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <RatingBar
        android:background="@color/azul"
        android:id="@+id/dialog_rating_bar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:textColor="#000"
            android:id="@+id/dialog_rating_btcancel"
            android:background="@drawable/button_efect"
            android:text="@string/cancelar"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:textColor="#000"
            android:id="@+id/dialog_rating_btok"
            android:background="@drawable/button_efect"
            android:text="@string/button"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>




</LinearLayout>