<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/branco">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/icone_menu_loja"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />




                    <!--<Button
                        android:layout_gravity="left"
                        android:textColor="@color/azul"
                        android:background="@drawable/button_efect"
                        android:text="Alimentos"
                        android:layout_marginBottom="5dp"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content" />

                    <Button

                        android:layout_marginBottom="5dp"
                        android:layout_gravity="left"
                        android:textColor="@color/azul"
                        android:background="@drawable/button_efect"
                        android:text="Alimentos"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        />

                    <Button

                        android:layout_marginBottom="5dp"
                        android:layout_gravity="left"
                        android:textColor="@color/azul"
                        android:background="@drawable/button_efect"
                        android:text="Alimentos"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content" />
                    <Button

                        android:layout_gravity="left"
                        android:textColor="@color/azul"
                        android:background="@drawable/button_efect"
                        android:text="Alimentos"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"/>-->


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/rosa">

                        <TextView
                            android:textAlignment="center"
                            android:textColor="@color/branco"
                            android:text="@string/contato"
                            android:textStyle="bold"
                            android:background="@color/azul"
                            android:textSize="30sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:id="@+id/loja_activity_telefone"
                            android:layout_gravity="center"
                            android:textSize="15sp"
                            android:text="+55 (11) 3045 - 5887"
                            android:textColor="@color/branco"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/loja_activity_site"
                            android:layout_gravity="center"
                            android:text="@string/www_webpeople_net"
                            android:textColor="@color/branco"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/loja_activity_email"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:text="@string/hintEditTextEmail"
                            android:textColor="@color/branco"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>





                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/rosa">
                    <TextView
                        android:background="@color/azul"
                        android:textSize="30sp"
                        android:layout_gravity="center"
                        android:text="@string/endere_o"
                        android:textStyle="bold"
                        android:textColor="@color/branco"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/loja_activity_avenida"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:text="@string/aberto"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:textColor="@color/branco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/loja_activity_cep"
                        android:layout_gravity="center"
                        android:textColor="@color/branco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:text="@string/activity_produto_almofada_confort"/>

                    <TextView
                        android:padding="10dp"
                        android:text="@string/categorias"
                        android:id="@+id/loja_activity_city"
                        android:layout_gravity="center"
                        android:textColor="@color/branco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>



                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/rosa">
                    <TextView
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:text="@string/aberto"
                        android:background="@color/azul"
                        android:textColor="@color/branco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:id="@+id/loja_activity_dias_abertura"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/branco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_produto_almofada_confort"
                        android:textStyle="bold"
                        android:padding="10dp"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:background="@color/rosa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/branco"
                        android:textSize="30sp"
                        android:background="@color/azul"
                        android:text="@string/avalia_o"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content" />
                    <RatingBar
                        android:layout_gravity="center"
                        android:isIndicator="true"
                        android:id="@+id/menu_frag_rating"
                        style="@style/foodRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/menu_frag_btAvaliar"
                        android:text="@string/avaliar"
                        android:layout_gravity="center"
                        android:textColor="@color/branco"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:background="@drawable/btn_effect_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>



                   <!-- <TextView

                        android:textColor="@color/branco"
                        android:layout_gravity="center"
                        android:text="18h às 20h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />-->


           <LinearLayout
               android:layout_marginTop="10dp"
               android:background="@color/rosa"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:background="@color/azul"
                   android:textStyle="bold"
                   android:textColor="@color/branco"
                   android:textSize="30sp"
                   android:text="@string/favoritar"
                   android:layout_width="match_parent"
                   android:textAlignment="center"
                   android:layout_height="wrap_content" />

               <ToggleButton
                   android:id="@+id/loja_menu_favorite_toggle"
                   android:layout_gravity="center"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   />
           </LinearLayout>




</LinearLayout>


    </ScrollView>

</LinearLayout>
