<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/activity_menu"
    android:background="@color/branco"
    tools:context="com.example.goku.using.activity.ProdutoActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include layout="@layout/include_toolbar"/>



                <!-- Logo da empresa -->
                <ImageView
                    android:id="@+id/produto_activity_logoEmpresa"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/sams" />

                <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <!-- Imagem do produto -->
                    <android.support.v4.view.ViewPager
                        android:id="@+id/produto_activity_viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"/>
                    <!-- Logo da empresa do produto -->
                    <ImageView
                        android:id="@+id/logo_frabricante_produto"
                        android:layout_gravity="start"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp" />

                </FrameLayout>
                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/titles"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

                <!-- Preço do produto -->
                <TextView
                    android:background="@color/rosa"
                    android:layout_gravity="right"
                    android:textStyle="bold"
                    android:id="@+id/produto_activity_precoProduto"
                    android:textSize="35sp"
                    android:textColor="@color/branco"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!-- Palavra Descrição grande -->
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:text="@string/descri_o"
                    android:textColor="@color/rosa"
                    android:textSize="40sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <!-- Placa rosa escrita produto -->
                    <TextView
                        android:id="@+id/produto_activity_nomeProduto"
                        android:textSize="25sp"
                        android:textColor="@color/azul"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textSize="19sp"
                        android:layout_gravity="end"
                        android:text="HX - HSCS16"
                        android:textColor="@color/cinza_mais_escuro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <TextView
                    android:text="@string/especifica_es"
                    android:textColor="@color/rosa"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                    <!-- Descrição do produto -->
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/text_example"
                        android:id="@+id/produto_activity_descProduto"
                        android:textColor="@color/azul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>
            </LinearLayout>
        </ScrollView>

    </FrameLayout>






    <android.support.design.widget.NavigationView
        app:itemIconTint="@color/azul"
        android:background="#fff"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_drawer_header"
        app:menu="@menu/nav_drawer_menu"
        app:itemTextColor="@color/azul"
        android:alwaysDrawnWithCache="true"
        android:drawingCacheQuality="auto"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/footer_item_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/navigationview_image_footer_height"
                android:gravity="center"
                android:src="@drawable/u_cortado"
                />

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
